--- a/resume/portfolio/templates/portfolio/home.html
+++ b/resume/portfolio/templates/portfolio/home.html
@@ -1,44 +1,22 @@
-{% load static %}
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Резюме | Denis Kondrashov</title>
-    <link rel="stylesheet" href="{% static 'css/style.css' %}">
-</head>
-<body>
-    <div class="container">
-        <header>
-            <div class="profile-pic">
-                <img src="{% static 'images/profile.jpg' %}" alt="Profile Picture">
-            </div>
-            <h1>Denis Kondrashov</h1>
-        </header>
-        
-        <section class="grid">
-            <div class="grid-item">
-                <h2>Умения</h2>
-                <p>Python, Django</p>
-            </div>
-            <div class="grid-item">
-                <h2>Достижения</h2>
-            </div>
-            <div class="grid-item">
-                <h2>Учеба</h2>
-            </div>
-            <div class="grid-item">
-                <h2>Опыт работы</h2>
-            </div>
-        </section>
+{% extends 'portfolio/base.html' %}
 
-        <footer>
-            <div class="social-links">
-                <a href="https://t.me/your_username"><img src="{% static 'images/telegram.png' %}" alt="Telegram"></a>
-                <a href="https://vk.com/your_profile"><img src="{% static 'images/vk.png' %}" alt="VK"></a>
-                <a href="tel:+123456789"><img src="{% static 'images/phone.png' %}" alt="Phone"></a>
-            </div>
-        </footer>
-    </div>
-</body>
-</html>
+{% block title %}Главная | Denis Kondrashov{% endblock %}
+
+{% block content %}
+
+    <section class="grid">
+        <div class="grid-item">
+            <h2><a href="{% url 'skills' %}">Умения</a></h2>
+        </div>
+        <div class="grid-item">
+            <h2><a href="{% url 'achievements' %}">Достижения</a></h2>
+        </div>
+        <div class="grid-item">
+            <h2><a href="{% url 'education' %}">Учеба</a></h2>
+        </div>
+        <div class="grid-item">
+            <h2><a href="{% url 'work_experience' %}">Опыт работы</a></h2>
+        </div>
+
+    </section>
+{% endblock %}
