--- a/resume/staticfiles/css/new_style.css
+++ b/resume/staticfiles/css/new_style.css
@@ -11,7 +11,6 @@ body {
     display: flex;
     max-width: 900px;
     margin: 50px auto;
-    background-color: white;
     box-shadow: 0 0 15px rgba(0, 0, 0, 0.1);
     border-radius: 8px;
     overflow: hidden;
@@ -65,6 +64,7 @@ h1 {
 .right-section {
     padding: 30px;
     width: 65%;
+    background-color: rgba(255, 255, 255, 0.8);
 }
 
 h2, h3 {
