feat: переделаны html

--- a/resume/portfolio/templates/portfolio/achievements.html
+++ b/resume/portfolio/templates/portfolio/achievements.html
@@ -1,8 +1,6 @@
-{% extends 'portfolio/base.html' %}
-
-{% block title %}Достижения | Denis Kondrashov{% endblock %}
+{% extends 'portfolio/new_home.html' %}
 
 {% block content %}
-    <h2>Достижения</h2>
-    <p>Здесь вы можете указать свои профессиональные и личные достижения.</p>
+    <h2>Проекты</h2>
+    <p>Здесь вы можете указать свои проекты.</p>
 {% endblock %}
