--- a/resume/portfolio/templates/portfolio/skills.html
+++ b/resume/portfolio/templates/portfolio/skills.html
@@ -1,8 +1,6 @@
-{% extends 'portfolio/base.html' %}
-
-{% block title %}Умения | Denis Kondrashov{% endblock %}
+{% extends 'portfolio/new_home.html' %}
 
 {% block content %}
-    <h2>Умения</h2>
+    <h2>Навыки</h2>
     <p>Здесь вы можете описать свои профессиональные навыки и компетенции.</p>
 {% endblock %}
