--- a/resume/portfolio/templates/portfolio/work_experience.html
+++ b/resume/portfolio/templates/portfolio/work_experience.html
@@ -1,8 +1,8 @@
-{% extends 'portfolio/base.html' %}
-
-{% block title %}Опыт работы | Denis Kondrashov{% endblock %}
+{% extends 'portfolio/new_home.html' %}
 
 {% block content %}
     <h2>Опыт работы</h2>
     <p>Здесь вы можете описать ваш предыдущий опыт работы.</p>
 {% endblock %}
+
+
