feat: исправлено название html

--- a/resume/portfolio/templates/portfolio/home.html
+++ b/resume/portfolio/templates/portfolio/home.html
@@ -7,7 +7,7 @@
             <h2><a href="{% url 'skills' %}">Навыки</a></h2>
         </div>
         <div class="grid-item">
-            <h2><a href="{% url 'achievements' %}">Проекты</a></h2>
+            <h2><a href="{% url 'projects' %}">Проекты</a></h2>
         </div>
         <div class="grid-item">
             <h2><a href="{% url 'education' %}">Обучение</a></h2>
