--- a/resume/staticfiles/css/new_style.css
+++ b/resume/staticfiles/css/new_style.css
@@ -83,16 +83,34 @@ a {
     color: inherit;
 }
 
-.details-link {
-    display: inline-block;
-    margin-bottom: 20px;
-    text-decoration: none;
-    color: #2c2c2c;
-    font-size: 16px;
-    border-bottom: 1px solid #2c2c2c;
+.grid {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: space-around; /* Используем для равномерного распределения */
+    height: 85vh; /* Задаем высоту секции так, чтобы боксы хорошо помещались */
+    padding: 0 10%;
 }
 
-.details-link:hover {
-    color: #007bff;
-    border-color: #007bff;
+.grid-item {
+    width: 60%; /* Немного уменьшаем ширину для лучшего центрирования */
+    margin: 10px 0; /* Добавляем вертикальный отступ */
+}
+
+.link-box {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    width: 100%;
+    padding: 30px 0; /* Увеличиваем высоту бокса */
+    background-color: rgba(44, 44, 44, 0.9); /* Цвет левой части */
+    color: #ffffff; /* Цвет текста, совпадающий с фоном левой части */
+    text-align: center;
+    text-decoration: none;
+    border-radius: 10px; /* Закругленные углы */
+    font-size: 18px;
+}
+
+.link-box:hover {
+    background-color: rgba(44, 44, 44, 0.7); /* Чуть более светлый цвет при наведении */
 }
