--- a/resume/portfolio/templates/portfolio/projects.html
+++ b/resume/portfolio/templates/portfolio/projects.html
@@ -2,5 +2,27 @@
 
 {% block content %}
     <h2>Проекты</h2>
-    <p>Здесь вы можете указать свои проекты.</p>
+
+    <div class="projects-container">
+        {% for project in projects %}
+        <div class="project-box">
+            <h3>{{ project.title }}</h3>
+            <hr>
+            <p>{{ project.description }}</p>
+            <hr>
+            {% if project.link %}
+            <a href="{{ project.link }}" target="_blank" class="project-link">
+                <i class="fab fa-github"></i>
+                Github
+            </a>
+            {% endif %}
+            <hr>
+            <div class="project-images">
+                {% for image in project.images.all|slice:":3" %}
+                    <img src="{{ image.image.url }}" alt="{{ project.title }}" class="project-image">
+                {% endfor %}
+            </div>
+        </div>
+        {% endfor %}
+    </div>    
 {% endblock %}
