--- a/resume/portfolio/templates/portfolio/home.html
+++ b/resume/portfolio/templates/portfolio/home.html
@@ -10,7 +10,7 @@
         <a href="{% url 'projects' %}" class="link-box">Проекты</a>
     </div>
     <div class="grid-item">
-        <a href="{% url 'education' %}" class="link-box">Обучение</a>
+        <a href="{% url 'education' %}" class="link-box">Образование</a>
     </div>
     <div class="grid-item">
         <a href="{% url 'work_experience' %}" class="link-box">Опыт работы</a>
