--- a/resume/portfolio/templates/portfolio/base.html
+++ b/resume/portfolio/templates/portfolio/base.html
@@ -8,6 +8,7 @@
     <title>Resume</title>
     <link rel="stylesheet" href="{% static 'css/new_style.css' %}">
     <link rel="stylesheet" href="{% static 'css/projects.css' %}">
+    <link rel="stylesheet" href="{% static 'css/education.css' %}">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
 </head>
 <body style="background-image: url('{% static "images/background.jpg" %}')">
