--- a/resume/portfolio/templates/portfolio/work_experience.html
+++ b/resume/portfolio/templates/portfolio/work_experience.html
@@ -2,7 +2,15 @@
 
 {% block content %}
     <h2>Опыт работы</h2>
-    <p>Здесь вы можете описать ваш предыдущий опыт работы.</p>
+
+    <div class="work-experience-container">
+        {% for work in work_experiences %}
+        <div class="work-experience-box">
+            <h3>{{ work.company }} - {{ work.position }}</h3>
+            <hr>
+            <p>{{ work.description }}</p>
+            <p>{{ work.start_date }} - {{ work.end_date|default:"Настоящее время" }}</p>
+        </div>
+        {% endfor %}
+    </div>
 {% endblock %}
-
-
