--- a/resume/portfolio/templates/portfolio/education.html
+++ b/resume/portfolio/templates/portfolio/education.html
@@ -1,7 +1,12 @@
 {% extends 'portfolio/base.html' %}
 
 {% block content %}
-    <h2>Образование</h2>
+    <div>
+        <a href="/">
+            <i class="fas fa-arrow-left"></i> Назад
+        </a>
+        <h2>Образование</h2>
+    </div>
 
     <div class="education-container">
         {% for education in education %}
