feat: добавлена контактная информация

--- a/resume/portfolio/templates/portfolio/base.html
+++ b/resume/portfolio/templates/portfolio/base.html
@@ -23,17 +23,17 @@
             <div class="contact-info">
                 <div class="icon-text">
                     <i class="fas fa-phone"></i>
-                    <span>+7 900 123 45 78</span>
+                    <span>+7 917 543 71 75</span>
                 </div>
                 <div class="icon-text">
                     <i class="fas fa-envelope"></i>
-                    <span>mail@mail.com</span>
+                    <span>denis.kondrashov1@gmail.com</span>
                 </div>
                 <div class="icon-text">
-                    <a href="https://t.me/yourtelegram" target="_blank">
+                    <a href="https://t.me/den050" target="_blank">
                         <i class="fab fa-telegram"></i>
                     </a>
-                    <a href="https://vk.com/yourvk" target="_blank">
+                    <a href="https://vk.com/id92746656" target="_blank">
                         <i class="fab fa-vk"></i>
                     </a>
                 </div>
