--- a/resume/portfolio/templates/portfolio/base.html
+++ b/resume/portfolio/templates/portfolio/base.html
@@ -17,8 +17,12 @@
     <div class="resume-container">
         <!-- Left section with image and contact details -->
         <div class="left-section">
-            <img src="{% static 'images/profile.jpg' %}"  class="profile-pic">
-            
+            {% if profile.image %}
+                <img src="{{ profile.image.url }}" class="profile-pic">
+            {% else %}
+                <p>Изображение не загружено</p>
+            {% endif %}
+
             <h1>{{ profile.name }}</h1>
     
             <div class="contact-info">
